--- a/Login.html
+++ b/Login.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconos/icono.png">
-    <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/global.css">
+    <title>Entrar</title>
+    <link rel="shortcut icon" href="./img/Iconos/icono.png">
+    <link rel="stylesheet" href="./Booststrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/global.css">
   </head>
   <body>
       <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -44,7 +43,7 @@
               <option class="bg-transparent" selected hidden value="">Cuenta</option>
               <option class="bg-transparent" value="Administrador">Administrador</option>
               <option class="bg-transparent" value="Secretario">Secretario</option>
-            </select>
+              </select>
             </div>
             <div class="w-100">
               <input class="m-5 bg-transparent border border-1 border-dark" type="password" name="password" id="password" placeholder="Contraseña">
@@ -56,13 +55,13 @@
       <footer class="bg-black">
         <div class="row w-100 ">
           <div class="col-lg-4 text-center" id="boton_entrar">
-            <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+            <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="./Login.html">Entrar</a>
           </div>
           <div class="col-lg-4">
             <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
           </div>
           <div class="col-lg-4 text-center">
-            <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+            <a href="./Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
           </div>
         </div>
       </footer>
