--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="img/Iconos/icono.png">
-        <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/global.css">
+        <link rel="shortcut icon" href="./img/Iconos/icono.png">
+        <link rel="stylesheet" href="./Booststrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/global.css">
     </head>
     <body">
         <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -35,7 +34,7 @@
               </div>
             </div>
         </nav>
-        <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
+        <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('./img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
           <div id="Noticias">
             <div id="Noticia Derecha"></div>
             <div id="Noticia Izquierda"></div>
@@ -47,13 +46,13 @@
         <footer class="bg-black">
           <div class="row w-100 ">
             <div class="col-lg-4 text-center" id="boton_entrar">
-              <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+              <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="./Login.html">Entrar</a>
             </div>
             <div class="col-lg-4">
               <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
             </div>
             <div class="col-lg-4 text-center">
-              <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+              <a href="./Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
             </div>
           </div>
         </footer>
