--- a/Nosotros.html
+++ b/Nosotros.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="shortcut icon" href="img/Iconos/icono.png">
-    <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="./Booststrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/global.css">
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -54,13 +54,13 @@
     <footer class="bg-black">
       <div class="row w-100 h-auto ">
         <div class="col-lg-4 text-center" id="boton_entrar">
-          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="./Login.html">Entrar</a>
         </div>
         <div class="col-lg-4">
           <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
         </div>
         <div class="col-lg-4 text-center">
-          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+          <a href="./Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
         </div>
       </div>
     </footer>
