--- a/Servicios.html
+++ b/Servicios.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconos/icono.png">
-    <link rel="stylesheet" href="/Booststrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="shortcut icon" href="./img/Iconos/icono.png">
+    <link rel="stylesheet" href="./Booststrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/global.css">
 </head>
 <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -37,7 +36,7 @@
     </nav>
     <div id="contenido-servicios" class="bg-image justify-content-around" style="background-image: url('img/Bg/fondo_servicios.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
       <div class="row w-100 p-lg-3 p-2" id="container">
-        <div class="col-12 col-lg-7 bg-opacity-25 bg-secondary  mt-lg-5" id="list-sings">
+        <div class="col-12 col-lg-7 bg-opacity-25 bg-secondary mt-lg-1 mt-xl-5" id="list-sings">
           <div class="row">
             <div class="col-6">
               <div class="row my-lg-4 my-xxl-5 ms-lg-1"><a href="#"class="text-start nav-link text-black border-bottom border-secondary border-start">Diagnostico, mantenimiento, reparación y calibración.</a></div>
@@ -54,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="ms-lg-3 col-lg-4 col-12 mt-3 mt-lg-5"id="sing-information">
+        <div class="ms-lg-3 col-lg-4 col-12 mt-3 mt-lg-1 mt-xl-5"id="sing-information">
           <div class="row">
             <p class="text-break">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
@@ -71,13 +70,13 @@
     <footer class="bg-black">
       <div class="row w-100 ">
         <div class="col-lg-4 text-center" id="boton_entrar">
-          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="/Login.html">Entrar</a>
+          <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="./Login.html">Entrar</a>
         </div>
         <div class="col-lg-4">
           <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
         </div>
         <div class="col-lg-4 text-center">
-          <a href="Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
+          <a href="./Contactenos.html"><img src="./img/Iconos/Footer-Llaman.svg" class="img-fluid mt-lg-2 mb-2 " height="auto" width="50" alt="Footer-Llaman"></a>
         </div>
       </div>
     </footer>
