--- a/Contactenos.html
+++ b/Contactenos.html
@@ -37,7 +37,7 @@
     <div id="contenido-contactenos" class="bg-image pb-0 justify-content-around" style="background-image: url('./img/Bg/fondo_contactenos.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
       <div class="row w-100 ms-lg-0 ms-1 p-3" id="div-contenido-contactenos">
         <div class="col-12 col-lg-4 ms-0 ms-lg-4 mt-lg-0 mt-xl-5 bg-secondary bg-opacity-25" id="div-form-contactenos">
-            <form id="formulario-pqrs" action="./php/INSERTS.php" method="POST">
+            <form id="formulario-pqrs" action="./php/formulario.php" method="POST">
               <div class="row my-lg-0 my-xl-3 w-100 my-1">
                 <div class="col-6 mx-1 my-2 my-lg-1 my-xl-2">
                   <input class="bg-light bg-opacity-75" type="text" placeholder="Nombres y apellidos" name="nombre" required>
