--- a/Login.html
+++ b/Login.html
@@ -36,26 +36,25 @@
       </nav>
       <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
         <div id="Formulario_Login" class="position-absolute top-50 start-50 translate-middle bg-secondary bg-transparent-75 bg-opacity-25">
-          <h1 class="text-center mx-5 mt-3">Administrador</h1>
-          <form action="#" method="post">
-            <div class="w-100">
-              <select class="bg-transparent mx-5 mt-5 dropdown-item-text border border-1 border-dark" name="Cuenta" id="Cuenta_admin">
-              <option class="bg-transparent" selected hidden value="">Cuenta</option>
-              <option class="bg-transparent" value="Administrador">Administrador</option>
-              <option class="bg-transparent" value="Secretario">Secretario</option>
-              </select>
+          <div class="row w-100" id="Tituto-login">
+            <h1 class="">Administrador</h1>
+          </div>
+          <form action="./php/login_v_1.php" method="post">
+            <div class=" w-100">
+              <input type="email" class="mt-5 bg-transparent border border-1 border-dark" name="email" id="email" placeholder="Correo Eléctronico">
             </div>
             <div class="w-100">
-              <input class="m-5 bg-transparent border border-1 border-dark" type="password" name="password" id="password" placeholder="Contraseña">
+              <input class="mb-5 mt-5 bg-transparent border border-1 border-dark" type="password" name="password" id="password" placeholder="Contraseña">
             </div>
-            <input id="Login_boton" class="text-black w-100 mb-0" type="submit" value="Entrar">
+            <input id="Login_boton" class="text-black w-100 mb-0 btn" type="submit" value="Entrar">
+            <a href="./singup.php">singup</a>
           </form>
         </div>
       </div>
       <footer class="bg-black">
         <div class="row w-100 ">
           <div class="col-lg-4 text-center" id="boton_entrar">
-            <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn" href="./Login.html">Entrar</a>
+            <a class="ms-5 mt-2 text-secondary border border-1 border-secondary nav-link btn collapse" href="./Login.html">Entrar</a>
           </div>
           <div class="col-lg-4">
             <p class="mt-lg-2 text-center text-muted">Copyright © 2022 SERVIDIESEL.FL<br> Todos los derechos reservados.</p>
