--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
             </div>
         </nav>
         <div id="contenido" class="bg-image pb-0 justify-content-around" style="background-image: url('./img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
-          <div id="Noticias">
-            <div id="Noticia Derecha"></div>
-            <div id="Noticia Izquierda"></div>
-          </div>
-          <div id="aside">
-            <aside></aside>
+          <div class="row w-100 py-3 py-lg-3 py-xl-5 px-5 h-100">
+            <div class="col-3">
+              <div id="div_img_notcia_1">
+                <img src="./img/img_subidas/img_actual_notc_1/imagen_noticia_1.jpeg" alt="imagen_noticia_1" id="imagen_public_noticia_1">
+              </div>
+            </div>
+            <div class="col-3">
+              <div id="div_img_notcia_2">
+                <img src="./img/img_subidas/img_actual_notc_2/imagen_noticia_2.jpeg" alt="imagen_noticia_2" id="imagen_public_noticia_2">
+              </div>
+            </div>
+            <div class="col-6 pb-5">
+              <textarea disabled name="informacion_de_la_noticia_seleccionada"  id="informacion_de_la_noticia_seleccionada" class="w-100 bg-secondary bg-opacity-25 text-break border-1 border-secondary rounded-3 text-break text-center text-black" rows="10" cols="10">asdasdfgasd</textarea>
+            </div>
           </div>
         </div>
         <footer class="bg-black">
