--- a/Contactenos.html
+++ b/Contactenos.html
@@ -7,7 +7,7 @@
         <title>Contactenos</title>
         <link rel="shortcut icon" href="./img/Iconos/icono.png">
         <link rel="stylesheet" href="./css/global.css">
-        <link rel="stylesheet" href="./Booststrap/css/bootstrap.css">
+        <link rel="stylesheet" href="./Booststrap/css/bootstrap.min.css">
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
