--- a/sesion.html
+++ b/sesion.html
@@ -30,7 +30,7 @@
         </nav>
         <div id="contenido-sesion" class="bg-image pb-0 justify-content-around" style="background-image: url('./img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
           <div id="container_editor_noticias" class="row w-100">
-            <form class="row w-100 pt-3 pt-lg-3 pt-xl-5" action="#" method="get" enctype="multipart/formdata">
+            <form class="row w-100 pt-3 pt-lg-3 pt-xl-5" action="./php/imagenes_not_v_1.php" method="post" enctype="multipart/form-data">
               <div class="col-3 btn" id="contenedor_imagen_1_ntc">
                 <input type="file" name="imagen_1" id="imagen_1" class="collapse">
                 <figure class="col-12 ms-5" id="figure_img_1">
@@ -40,10 +40,9 @@
                   </label>
                   <img id="imagen_1_pre">
                 </figure>
-
               </div>
               <div class="col-3 btn "id="contenedor_imagen_2_ntc">
-                <input type="file" name="imagen_2" id="imagen_2" class="collapse" aria-label="">
+                <input type="file" name="imagen_2" id="imagen_2" class="collapse">
                 <figure class="col-12" id="figure_img_2">
                   <label class="col-12" for="imagen_2">
                     <img src="./img/Iconos/cloud-arrow-up.svg"alt="icono_subir_imagen" width="80%">
@@ -59,7 +58,6 @@
                   <input class="btn" type="submit" name="enviar_noticia" id="enviar_noticia" value="Publicar">
                 </div>
               </div>
-              
             </form>
           </div>
         </div>
@@ -75,5 +73,6 @@
         </footer>
         <script src="./Booststrap/js/bootstrap.bundle.min.js"></script>
         <script src="./js/app_sesion_v_1.js"></script>
+        <script src="./js/app_sesion_info_noticias_v_1.js"></script>
     </body>
 </html>
