--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>
             </div>
             <div class="col-6 pb-5">
-              <textarea disabled name="informacion_de_la_noticia_seleccionada"  id="informacion_de_la_noticia_seleccionada" class="w-100 bg-secondary bg-opacity-25 text-break border-1 border-secondary rounded-3 text-break text-center text-black" rows="10" cols="10">asdasdfgasd</textarea>
+              <textarea disabled name="informacion_de_la_noticia_seleccionada"  id="informacion_de_la_noticia_seleccionada" class="w-100 bg-secondary bg-opacity-25 text-break border-1 border-secondary rounded-3 text-break text-center text-black" rows="10" cols="10"></textarea>
             </div>
           </div>
         </div>
