--- a/sesion.html
+++ b/sesion.html
@@ -30,7 +30,7 @@
         </nav>
         <div id="contenido-sesion" class="bg-image pb-0 justify-content-around" style="background-image: url('./img/Bg/Fondo_Noticias.svg'); height:100vh; background-position: center center; background-attachment: fixed;">
           <div id="container_editor_noticias" class="row w-100">
-            <form class="row w-100 pt-3 pt-lg-3 pt-xl-5" action="./php/imagenes_not_v_1.php" method="post" enctype="multipart/form-data">
+            <form id="formulario_noticias" class="row w-100 pt-3 pt-lg-3 pt-xl-5" action="./php/imagenes_not_v_1.php" method="post" enctype="multipart/form-data">
               <div class="col-3 btn" id="contenedor_imagen_1_ntc">
                 <input type="file" name="imagen_1" id="imagen_1" class="collapse">
                 <figure class="col-12 ms-5" id="figure_img_1">
